unpackaged/main/default/objects/RICSC_SocialMediaID__c/RICSC_SocialMediaID__c.object-meta.xml
<CustomObject>
    <description>This object is used to collect  the Social ID of the related Local records.</description>
    <label>Social Media ID</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media IDs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>RICSC_VCASharingGolden__c</fullName>
        <label>VCA Sharing Golden</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>RICSC_VCASharingLocal__c</fullName>
        <label>VCA Sharing Local</label>
    </sharingReasons>
</CustomObject>