unpackaged/main/default/objects/RICSC_SocialMediaID__c/fields/RICSC_DefaultGRSocialMediaID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DefaultGRSocialMediaID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default GR Social Media ID</label>
        <type>Checkbox</type>
    </CustomField>