unpackaged/main/default/objects/RICSC_SocialMediaID__c/fields/RICSC_DefaultSocialMediaID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DefaultSocialMediaID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default Social Media ID , the last modified social media</description>
        <label>Default Social Media ID</label>
        <type>Checkbox</type>
    </CustomField>