unpackaged/main/default/objects/RICSC_SocialMediaID__c/fields/RICSC_SocialMedia__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SocialMedia__c</fullName>
        <label>Social Media</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>