unpackaged/main/default/objects/RICSC_SocialMediaID__c/fields/RICSC_SocialMediaType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SocialMediaType__c</fullName>
        <description>Picklist to indicate the Social Media channel (type)</description>
        <label>Social Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Kakao talk</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>WeChat</fullName>
                    <isActive>false</isActive>
                    <label>WeChat</label>
                </value>
                <value>
                    <fullName>We Chat</fullName>
                </value>
                <value>
                    <fullName>Whatsapp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>