unpackaged/main/default/objects/RICSC_SocialMediaID__c/fields/RICSC_WechatOpenID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_WechatOpenID__c</fullName>
        <description>WeChat Open ID field</description>
        <label>WechatOpenID</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>