unpackaged/main/default/objects/RICSC_SocialMediaID__c/fields/RICSC_WechatUnionID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_WechatUnionID__c</fullName>
        <description>WeChat Union ID field</description>
        <label>WechatUnionID</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>